--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-/* import roboto condensed google font*/ 
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap'); /* import roboto condensed google font*/ 
+
 
 /*initialize variables for colors*/
 :root {
@@ -10,7 +11,7 @@
 
 /*and set it to the font family of the portfolio page*/
 body {
-  font-family: 'Roboto Condensed', sans-serif;
+  /*font-family: "Roboto Condensed", sans-serif; /* !important; */
   padding-top: 5% !important;
 }
 
